--- a/style.css
+++ b/style.css
@@ -118,3 +118,8 @@
 
     
   }
+
+  /*font-family: 'Buda', cursive;
+font-family: 'Poiret One', cursive;
+font-family: 'Pompiere', cursive;
+font-family: 'Ysabeau SC', sans-serif;
